--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
   <div class="navbar">
-    <a href="#" id="">sth</a>
-    <a href="#" id="">sth</a>
-    <a href="#" id="">sth</a>
-    <a href="#" id="">sth</a>
+    <a href="#" id="#">sth</a>
+    <a href="#" id="#">sth</a>
+    <a href="#" id="#">sth</a>
+    <a href="#" id="#">sth</a>
   </div>
 
   <!-- Title -->
@@ -32,7 +32,7 @@
   <div class="main">
     <h2>Blog content</h2>
     <div class="card">
-      <img src="assets\DSC_0471.JPG" alt="" class="card-img">
+      <img src="assets/DSC_0471.JPG" alt="" class="card-img">
       <h2 class="card-title">Blog post title</h2>
       <div class="card-content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere semper urna, ut pellentesque sem
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="assets\DSC_0471.JPG" alt="" class="card-img">
+      <img src="assets/DSC_0471.JPG" alt="" class="card-img">
       <h2 class="card-title">Blog post title</h2>
       <div class="card-content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere semper urna, ut pellentesque sem
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="assets\DSC_0471.JPG" alt="" class="card-img">
+      <img src="assets/DSC_0471.JPG" alt="" class="card-img">
       <h2 class="card-title">Blog post title</h2>
       <div class="card-content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere semper urna, ut pellentesque sem
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="assets\DSC_0471.JPG" alt="" class="card-img">
+      <img src="assets/DSC_0471.JPG" alt="" class="card-img">
       <h2 class="card-title">Blog post title</h2>
       <div class="card-content">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere semper urna, ut pellentesque sem
@@ -97,7 +97,7 @@
     <div class="col-2">
       <h3>Newsletter</h3>
       <form action="">
-        <input type="email" name="" id="" placeholder="Email Adress" required>
+        <input type="email" name="#" id="#" placeholder="Email Adress" required>
         <br>
         <button type="submit">Subscribe now</button>
       </form>
