--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
   <div class="navbar">
-    <a href="#" id="#">sth</a>
-    <a href="#" id="#">sth</a>
-    <a href="#" id="#">sth</a>
-    <a href="#" id="#">sth</a>
+    <a href="#" id="1">sth</a>
+    <a href="#" id="2">sth</a>
+    <a href="#" id="3">sth</a>
+    <a href="#" id="4">sth</a>
   </div>
 
   <!-- Title -->
@@ -96,8 +96,8 @@
     </div>
     <div class="col-2">
       <h3>Newsletter</h3>
-      <form action="">
-        <input type="email" name="#" id="#" placeholder="Email Adress" required>
+      <form action="#">
+        <input type="email" name="#" id="5" placeholder="Email Adress" required>
         <br>
         <button type="submit">Subscribe now</button>
       </form>
